refine help html

--- a/Pastecard/help.html
+++ b/Pastecard/help.html
@@ -6,26 +6,22 @@
 	<meta name="theme-color" content="#004080">
 	<title>Pastecard &ndash; Help</title>
 	<style type="text/css">
-		body { font: 20px system-ui, Roboto, "Segoe UI", sans-serif; background-color: #fff; color: #111; text-align: center; margin: 0; padding: 0; border-top: 1rem solid #004080; }
+		body { font: 18px system-ui, sans-serif; background-color: #fff; color: #111; text-align: center; margin: 0; padding: 0; border-top: 1rem solid #004080; }
 		header { margin: 2rem auto; padding: 0; }
-		section { width: 800px; margin: 4rem auto 2rem auto; padding: 0; text-align: left; }
-		h1 { color: #222; font-size: 3rem; line-height: 1; margin: 0; padding: 0; }
+		section { width: 90%; margin: 2rem auto; padding: 0; text-align: left; }
+		h1 { color: #222; font-size: 3rem; line-height: 1; margin: 0 0 0.25rem 0; padding: 0; }
 		h2 { color: #444; font-weight: normal; margin: 2rem 0 0 0; padding: 0; }
 		p, li { line-height: 1.4; }
 		ul { padding-left: 1rem; }
 		ul li { margin-bottom: 0.5rem; }
 		h2:target { margin-left: -1.5rem; padding-left: 0.5rem; border-left: 1rem solid #fc6; }
-		
-		@media only screen and (max-width: 736px) {
-			body { font-size: 18px; }
-			h1 { margin-bottom: 0.25rem; }
-			section { width: 90%; margin: 2rem auto; }
-		}
+        a, a:visited { color: #004080; }
 		
 		@media (prefers-color-scheme: dark) {
 			body { background-color: #111; color: #eee; }
 			h1 { color: #ddd; }
 			h2 { color: #aaa; }
+            a, a:visited { color: #008AFF; }
 		}
 	</style>
 </head>
@@ -35,7 +31,7 @@
 </header>
 
 <section>
-	<h2 id="overview">About</h2>
+	<h2>About</h2>
 	<p>Pastecard is a small, single page for notes. You can add to, edit, or completely erase it however you like. It&rsquo;s like the digital version of writing on the back of your hand. Try it for:</p>
 	<ul>
 		<li>Shopping lists</li>
@@ -46,7 +42,7 @@
 		<li>and more!</li>
 	</ul>
 
-	<h2 id="started">Getting Started</h2>
+	<h2>Getting Started</h2>
 	<ul>
 		<li>To <strong>sign up</strong>, fill out the form on the sign up page.</li>
 		<li>To see your Pastecard, just go to your Pastecard URL. No login required!</li>
@@ -55,7 +51,7 @@
 		<li>To <strong>install Pastecard on a Mac</strong>, go to your Pastecard URL in Safari and choose &ldquo;Add to Dock&hellip;&rdquo; from the File menu. (Requires macOS 14.0 Sonoma or newer)</li>
 	</ul>
 
-	<h2 id="using">Using Pastecard</h2>
+	<h2>Using Pastecard</h2>
 	<ul>
 		<li>Go to your Pastecard URL to see your saved text in a readable card view.</li>
 		<li>Click or tap on the card to make it editable, and you can make changes or copy text to your clipboard.</li>
@@ -75,7 +71,7 @@
 		<li>Ask Siri to &ldquo;Add something to my Pastecard&rdquo; or &ldquo;What&rsquo;s on my Pastecard?&rdquo;</li>
 	</ul>
 
-	<h2 id="security">Security</h2>
+	<h2>Security</h2>
 	<ul>
 		<li>Pastecard does not use passwords: <strong>if someone knows your Pastecard URL, they have the same access you do.</strong> Please don&rsquo;t use Pastecard for any sensitive information.</li>
 		<li>If you&rsquo;re concerned about privacy, we recommend choosing an ID that you don&rsquo;t use anywhere else.</li>
@@ -93,8 +89,8 @@
 		<li>We use Cloudflare for our infrastructure (including data storage, compute, DNS, domain registry, email routing, and SSL), and Google for our email.</li>
 	</ul>
 
-	<h2 id="contact">Contact</h2>
-	<p>Email <strong>support@pastecard.net</strong> with any questions, requests, or comments.</p>
+	<h2>Contact</h2>
+	<p>Email <a href="mailto:support@pastecard.net">support@pastecard.net</a> with any questions, requests, or comments.</p>
 
 </section>
 </body>
